--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #ff0195;
+    --cor-de-fundo: #fb36a9c2;
     --verde: #33ff003c;
     --branco: #e5ff0053;
     --botao-ativo: #0008ff1c;
