--- a/style.css
+++ b/style.css
@@ -61,3 +61,21 @@ body {
 .botoes {
     display: block;
 }
+
+.ativo{
+    background-color: var (--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+@media screen and (mid-width:768px){
+    .botoes{
+        display: flex;
+    }
+    .botoes :fist-child{
+        border-radius: 40px 0 0 0;
+
+    }
+    .botao:last-child{
+        border-radius:40px 0 0 0;
+    }
+}
