--- a/style.css
+++ b/style.css
@@ -66,6 +66,9 @@ body {
     background-color: var (--botao-ativo);
     border-bottom: 4px solid var(--verde);
 }
+.abas-textos(
+    background-color:var(--botao-ativo);
+)
 
 @media screen and (mid-width:768px){
     .botoes{
